@@ -1,4 +1,4 @@
-# minesweeper (Figma, JavaFX)
+# Minesweeper (Figma, JavaFX)
 
 By leveraging the popularity and nostalgia behind Minesweeper, the game "OceanRescue" aims to raise awareness about the importance of protecting the ocean and its endangered species. Instead of having a regular square grid with cells and mines, why not have an irregular grid that will represent for example an ocean. You might often click on a cell and stumble upon a "mine", which is in this case toxic waste from factories dumped into the ocean. If a player stumbles upon toxic waste, all marine life in that area dies, and it's game over. This improved version of the Minesweeper consists of 3 levels: easy, medium, and hard. As you progress in the game, you will get bigger oceans (bigger grids), and more toxic waste to make the game harder.
 
@@ -20,3 +20,28 @@ https://github.com/user-attachments/assets/b55165ad-018e-415a-9e5d-0163a0aff316
 <img width="1000" alt="Screenshot 2024-09-23 at 12 11 17" src="https://github.com/user-attachments/assets/c27c4ba4-38d2-4d28-b52e-b3ec7a6e3190">
 - Double click on a marine animal to reveal information about its endangered status
 <img width="1000" alt="Screenshot 2024-09-23 at 12 11 45" src="https://github.com/user-attachments/assets/947c7790-5e94-486a-a0ed-fdcc2fd3a748">
+
+## Instructions
+
+- Clone the Repository from GitHub
+  - File > Import > Git > Projects from Git.
+  - Choose Clone URI and click Next.
+  - Paste the URL of the GitHub repository into the URI field and press Next.
+  - Select a local directory to clone the project to, and click Next.
+  - Choose Import as Maven Project then click Finish.
+- Download Java (I use Java 22.0.2)
+- Download the JavaFX SDK (I use javafx-sdk-21.0.4)
+- Add JavaFX Libraries to the Project in Eclipse
+  - Right-click the imported project in Eclipse
+  - Choose Properties.
+  - Java Build Path > Libraries tab.
+  - Click Add External JARs and navigate to the lib folder of the extracted JavaFX SDK.
+  - Select all the JAR files in the lib folder and click Open.
+  - Click Apply and Close.
+- Configure JavaFX in the Run Configuration
+  - Go to Run > Run Configurations
+  - Select the run configuration for your JavaFX project.
+  - In the Arguments tab, in the VM arguments section, add the following:
+    ```
+    --module-path /path-to-javafx-sdk/lib --add-modules javafx.controls,javafx.fxml
+  - Apply the changes and close the configuration window.
